@@ -1,3 +1,9 @@
+2010-05-25  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Compiler/GNUCompiler.cs: Don't include the generic () errors
+	  in the errors list. Don't reverse order of errors from
+	  compiler.
+
 2010-05-21  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* Makefile.am:
